# tracecal

./: .gitignore  .pre-commit-hooks.yaml  .tracecal-progress.json  NOTICE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: quickstart.py
results/: calibration_v0.1.0a1.json  gate_v0.1.0a1.json  real_v0.1.0a1.json
scripts/: check_marketing.sh  measure.py  verify_step.py
src/tracecal/: __init__.py  api.py  cli.py  curate.py  pytest_plugin.py  schema.py
src/tracecal/conformal/: __init__.py  calibrate.py  coverage.py  nonconformity.py  split.py
src/tracecal/io/: __init__.py  labels.py  lerobot_v3.py
src/tracecal/physics/: __init__.py  gate.py  kinematics.py  registry.py  resolver.py
src/tracecal/report/: __init__.py  card.py  emit.py
tests/: conftest.py
tests/fixtures/urdf/: synth_2dof.urdf  synth_3dof_mixed.urdf
tests/integration/: test_api.py  test_io_parquet.py  test_marketing_gate.py  test_pipeline_mock.py
tests/physics/: test_api_physics.py  test_resolver_urdf.py
tests/unit/: test_card.py  test_cli.py  test_conformal_core.py  test_conformal_property.py  test_coverage.py  test_crosscheck.py  test_curate.py  test_emit.py  test_gate.py  test_io_arrays.py  test_isotonic.py  test_kinematics.py  test_labels.py  test_mondrian.py  test_pytest_plugin.py  test_reference_mode.py  test_registry.py  test_resolver_degrade.py  test_schema.py  test_split.py
