[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracecal"
dynamic = ["version"]
description = "Conformal-calibrated, URDF physics-gated validity & abstention auditing for LeRobot robot-learning datasets"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "hinanohart" }]
keywords = [
    "lerobot", "robot-learning", "dataset-quality", "conformal-prediction",
    "calibration", "urdf", "kinematics", "physics-validity", "abstention",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
]
# Core = numpy + scipy + pydantic ONLY (torch-free, GPU-free, no lerobot/torch import
# at runtime). Hub loading, URDF physics and the crepes cross-check are opt-in extras.
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.5",
]

[project.urls]
Homepage = "https://github.com/hinanohart/tracecal"
Repository = "https://github.com/hinanohart/tracecal"

[project.optional-dependencies]
# Load real LeRobotDataset v3 episodes (parquet) straight from the Hub — no torch/lerobot.
hub = ["huggingface_hub>=0.23", "pyarrow>=14"]
# URDF joint-limit extraction for the industrial-arm physics hard-gate.
physics = ["yourdfpy>=0.0.56", "robot_descriptions>=1.10"]
# crepes + sklearn are used ONLY as an independent cross-check of the conformal core
# in tests; they are never imported at runtime.
crosscheck = ["crepes>=0.7", "scikit-learn>=1.3"]
test = [
    "pytest>=8.0", "pytest-cov>=5.0", "hypothesis>=6.100",
    "mypy>=1.13,<2", "ruff>=0.15,<0.16",
]
all = [
    "huggingface_hub>=0.23", "pyarrow>=14",
    "yourdfpy>=0.0.56", "robot_descriptions>=1.10",
]

[project.scripts]
tracecal = "tracecal.cli:main"

# v0.1 ships exactly one ConstraintBackend (robotics joint-limit). The protocol seam is
# real so v0.2 backends can register without touching the core.
[project.entry-points."tracecal.backends"]
robotics = "tracecal.physics.gate:RoboticsConstraintBackend"

# pytest plugin: fail a test run when a dataset's calibrated coverage breaches target.
[project.entry-points.pytest11]
tracecal = "tracecal.pytest_plugin"

[tool.hatch.version]
path = "src/tracecal/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tracecal"]

[tool.hatch.build.targets.sdist]
include = ["src/tracecal", "tests", "scripts", "results", "examples", "LICENSE", "NOTICE", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
markers = [
    "physics: requires yourdfpy/robot_descriptions (physics extra)",
    "hub: requires network + huggingface_hub (not run in core CI)",
    "crosscheck: requires crepes/scikit-learn (crosscheck extra)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/tracecal"]
[[tool.mypy.overrides]]
module = ["yourdfpy.*", "robot_descriptions.*", "crepes.*", "sklearn.*", "scipy.*", "pyarrow.*", "huggingface_hub.*"]
ignore_missing_imports = true
